--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
@@ -21,7 +22,7 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
     "react": "19.0.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "5.4.0",
