--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.13",
+    "expo-device": "~7.1.4",
     "expo-image-picker": "^16.1.4",
     "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
     "react": "19.0.0",
@@ -31,7 +33,9 @@
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
